k8s-manifests + gateway API/userprofile-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: subbu-1-ns
spec:
  replicas: 5
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: usernode-js
        image: saiteja2502/userprofileretail:latest
        ports:
        - containerPort: 3130  # Change to match your app's port
