k8s-manifests + gateway API/argocd-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
  namespace: subbu-1-ns
spec:
  gatewayClassName: cilium 
  listeners:
  - name: http
    protocol: HTTP
    port: 80            # fixed port for gateway
    allowedRoutes:
      namespaces:
        from: Same
